Add ButtonAddModule and style it

--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -118,7 +118,7 @@
 }
 
 .toolbar-tab-list {
-	min-height: 100%;
+	// min-height: 100%;
 	.buttons-ctn {
 		padding:0;
 		margin:0;
@@ -309,5 +309,52 @@
 		padding: 20px 30px 20px 0;
 		box-sizing: border-box;
 		cursor: pointer;
+	}
+}
+
+.button-add-module {
+	width: 100%;
+	display: block;
+	height: 60px;
+	position: relative;
+	cursor: pointer;
+	select {
+		width: 100%;
+		height: 100%;
+		position: relative;
+		z-index: 1;
+		opacity: 0;
+		cursor: pointer;
+	}
+	&:before {
+		content:'';
+		position: absolute;
+		top:0; bottom:0; left:0; right:0;
+		border: 1px dashed @accent;
+		margin: 8px;
+		border-radius: 4px;
+		transition: background-color 200ms ease-out;
+	}
+	&:after {
+		content: 'Add Module';
+		.font--button;
+		// font-size: 38px;
+		color: @accent;
+		position: absolute;
+		top:0.2em; bottom:0; left:0; right:0;
+		display: flex;
+		align-items:center;
+		justify-content: center;
+		text-align: center;
+		transition: color 200ms ease-out;
+	}
+	// ~> HOVER
+	&:hover {
+		&:before {
+			background-color: @accent;
+		}
+		&:after {
+			color: white;
+		}
 	}
 }
