Add placeholder styles to items

--- a/src/styles/items/item-image.less
+++ b/src/styles/items/item-image.less
@@ -5,4 +5,9 @@
 		&.option--text-alignment-center > * { .recipe--text-alignment-center; }
 		&.option--text-alignment-right > * { .recipe--text-alignment-right; }
 	}
+	.image.no-src {
+		padding-bottom: 66%;
+		background-color: cornflowerblue;
+		
+	}
 }
