--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -374,3 +374,70 @@
 		.font--intertitle;
 	}
 }
+
+.button-delete-module {
+	display: flex;
+	align-items: center;
+	margin-right: 10px;
+	button {
+		font-size: 21px;
+		line-height: 1em;
+		color: #757c83;
+		width: 40px;
+		height: 40px;
+		display: block;
+		padding: 0;
+		background-color: @background;
+		border-radius: 100%;
+		cursor: pointer;
+		position: relative;
+		overflow:hidden;
+		transition: color 90ms ease-out;
+		.wrapper {
+			width: 100%;
+			height: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		span {
+			position: relative;
+			z-index: 1;
+			display: block;
+			width: 15px;
+		}
+		&:before {
+			content:'';
+			position:absolute;
+			top:0; bottom:0; left:0; right:0;
+			transform: scale(0);
+			background-color: @error;
+			transition: transform 90ms ease-out;
+			border-radius: 100%;
+		}
+	}
+	// ~> IS NOT VISIBLE
+	transform: translateX(10px);
+	opacity: 0;
+	visibility: hidden;
+	transition: transform 160ms ease-out, opacity 160ms ease-out, visibility 0ms;
+	transition-delay: 0ms, 0ms, 160ms;
+	// ~> IS VISIBLE
+	.toolbar-list-button-ctn:hover & {
+		opacity: 1;
+		visibility: visible;
+		transform: translateX(0);
+		transition-delay: 0ms;
+	}
+	// ~> IS PRESSING
+	&.cnh_holding {
+		button {
+			color: white;
+			transition-duration: 1000ms;
+			&:before {
+				transform: scale(1);
+				transition-duration: 1000ms;
+			}
+		}
+	}
+}
