--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -375,20 +375,19 @@
 	}
 }
 
-.button-delete-module {
+.button-delete-module,
+.button-delete-item {
 	display: flex;
 	align-items: center;
-	margin-right: 10px;
 	button {
 		font-size: 21px;
 		line-height: 1em;
 		color: #757c83;
-		width: 40px;
-		height: 40px;
+		
 		display: block;
 		padding: 0;
 		background-color: @background;
-		border-radius: 100%;
+		
 		cursor: pointer;
 		position: relative;
 		overflow:hidden;
@@ -410,10 +409,8 @@
 			content:'';
 			position:absolute;
 			top:0; bottom:0; left:0; right:0;
-			transform: scale(0);
 			background-color: @error;
 			transition: transform 90ms ease-out;
-			border-radius: 100%;
 		}
 	}
 	// ~> IS NOT VISIBLE
@@ -423,7 +420,8 @@
 	transition: transform 160ms ease-out, opacity 160ms ease-out, visibility 0ms;
 	transition-delay: 0ms, 0ms, 160ms;
 	// ~> IS VISIBLE
-	.toolbar-list-button-ctn:hover & {
+	.toolbar-list-button-ctn:hover &,
+	.toolbar-accordion-item:hover & {
 		opacity: 1;
 		visibility: visible;
 		transform: translateX(0);
@@ -435,8 +433,46 @@
 			color: white;
 			transition-duration: 1000ms;
 			&:before {
-				transform: scale(1);
 				transition-duration: 1000ms;
+			}
+		}
+	}
+}
+
+.button-delete-module {
+	margin-right: 10px;
+	button {
+		width: 40px;
+		height: 40px;
+		border-radius: 100%;
+		&:before {
+			border-radius: 100%;
+			transform: scale(0);
+		}
+	}
+	// ~> IS PRESSING
+	&.cnh_holding {
+		button {
+			&:before {
+				transform: scale(1);
+			}
+		}
+	}
+}
+
+.button-delete-item {
+	button {
+		width: 40px;
+		height: 100%;
+		&:before {
+			transform: translateX(-100%);
+		}
+	}
+	// ~> IS PRESSING
+	&.cnh_holding {
+		button {
+			&:before {
+				transform: translateX(0);
 			}
 		}
 	}
