Fix some markdown error

--- a/src/styles/recipes/recipe-font.less
+++ b/src/styles/recipes/recipe-font.less
@@ -2,7 +2,8 @@
 .recipe--font-title-extra-big {
 	font-family: var(--font-family-title-extra-big);
 	font-size: calc(~'var(--font-size-title-extra-big) * 0.6');
-	line-height: 1.2em;
+	line-height: 1.1em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-extra-big) * 0.8');
 	});
@@ -13,7 +14,8 @@
 .recipe--font-title-big {
 	font-family: var(--font-family-title-big);
 	font-size: calc(~'var(--font-size-title-big) * 0.6');
-	line-height: 1.2em;
+	line-height: 1.1em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-big) * 0.8');
 	});
@@ -25,6 +27,7 @@
 	font-family: var(--font-family-title-normal);
 	font-size: calc(~'var(--font-size-title-normal) * 0.6');
 	line-height: 1.2em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-normal) * 0.8');
 	});
@@ -36,6 +39,7 @@
 	font-family: var(--font-family-title-small);
 	font-size: calc(~'var(--font-size-title-small) * 0.6');
 	line-height: 1.2em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-small) * 0.8');
 	});
@@ -47,6 +51,7 @@
 	font-family: var(--font-family-title-extra-small);
 	font-size: calc(~'var(--font-size-title-extra-small) * 0.6');
 	line-height: 1.2em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-extra-small) * 0.8');
 	});
@@ -59,6 +64,7 @@
 	font-family: var(--font-family-text-big);
 	font-size: calc(~'var(--font-size-text-big) * 0.6');
 	line-height: 1.6em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-text-big) * 0.8');
 	});
@@ -70,6 +76,7 @@
 	font-family: var(--font-family-text-normal);
 	font-size: calc(~'var(--font-size-text-normal) * 0.6');
 	line-height: 1.6em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-text-normal) * 0.8');
 	});
@@ -81,6 +88,7 @@
 	font-family: var(--font-family-text-small);
 	font-size: calc(~'var(--font-size-text-small) * 0.6');
 	line-height: 1.6em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-text-small) * 0.8');
 	});
@@ -93,6 +101,7 @@
 	font-family: var(--font-family-label-big);
 	font-size: calc(~'var(--font-size-label-big) * 0.6');
 	line-height: 1.1em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-label-big) * 0.8');
 	});
@@ -104,6 +113,7 @@
 	font-family: var(--font-family-label-normal);
 	font-size: calc(~'var(--font-size-label-normal) * 0.6');
 	line-height: 1.1em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-label-normal) * 0.8');
 	});
@@ -115,6 +125,7 @@
 	font-family: var(--font-family-label-small);
 	font-size: calc(~'var(--font-size-label-small) * 0.6');
 	line-height: 1.1em;
+	font-weight: normal;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-label-small) * 0.8');
 	});
