Fix font loading and saving problem

--- a/src/styles/inputFont.less
+++ b/src/styles/inputFont.less
@@ -81,6 +81,10 @@
 			.font--text-small;
 			font-style: italic;
 			margin-left: 8px;
+			overflow: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			padding-right: 24px;
 		}
 		&:after {
 			content: url('data:image/svg+xml; utf8, <svg xmlns="http://www.w3.org/2000/svg" style="padding-bottom:150%; height:1px; width:100%; overflow:visible; display:block;" viewBox="0 0 8 12"><path fill="none" stroke="@{grey-light}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M1 7l3-3 3 3M1 1h6M4 4v7"/></svg>');
