Small fine-tuning of styles

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -15,7 +15,7 @@ figure {
 }
 
 article {
-	padding-top: 20vh;
+	padding-top: 100px;
 	background-color: white;
 	margin: 0 auto;
 	margin-left: 320px;
