--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -12,6 +12,7 @@
 	left: 0;
 	bottom: 0;
 	width: 320px;
+	z-index: 1;
 }
 
 .toolbar-ctn {
@@ -20,7 +21,7 @@
 	background-color: white;
 	border-right: 1px solid @border;
 	overflow: hidden;
-	box-shadow: 0px 8px 40px rgba(0,0,0,0.2);
+	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 	width: 100%;
 	position: absolute;
 	bottom: 0;
